--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL ="https://hcc.backend.hinzahsolutions.com"
+VITE_API_URL ="https://hcc.backends.hinzahsolutions.com"
 # VITE_API_URL ="https://api.hcc.hinzahsolutions.com      https://hcc.backend.hinzahsolutions.com   http://api.hcc.hinzahsolutions.com    http://192.168.0.5:14924  "
